--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,36 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.grid {
+ border-style: dashed;
+}
+
+.buttonComponent{
+  background-color: gray;
+  border-style: groove;
+}
+
+.tableComponent{
+  position: relative;
+  left: 627px;
+}
+
+.timeComponent{
+  position: relative;
+  left: 789px;
+  top:-46px;
+}
+.header{
+  position: relative;
+  left:600px;
+  top:-25px;
 }
